# plan-03-rag-documents

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  docker-compose.server.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  类Claude长文本智能Agent产品PRD.md
backend/: Dockerfile  Dockerfile.prod  README.md  pyproject.toml
backend/agent_flow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: config.py  main.py
backend/app/agent/: graph.py  intent.py  routing.py  state.py
backend/app/audit/: store.py
backend/app/auth/: identity.py  jwt.py  passwords.py  skill_admin.py  tenant.py  users_store.py
backend/app/desktop/: __main__.py  app.py
backend/app/flows/: __init__.py  registry.py  specs.py
backend/app/integrations/: pfm_client.py
backend/app/llm/: factory.py
backend/app/middleware/: rate_limit.py
backend/app/observability/: langfuse.py
backend/app/rag/: access.py  authorize.py  bindings_store.py  chunking.py  credentials.py  db.py  ingest.py  ragflow_client.py  store.py  types.py
backend/app/sessions/: store.py
backend/app/skills/: loader.py  models.py  registry.py  resolve.py  router.py
backend/migrations/: 001_documents.sql  002_client_embeddings.sql  002_tenant.sql  003_audit.sql  004_ragflow_bindings.sql  005_users.sql
backend/tests/: conftest.py  test_api_admin_ragflow.py  test_api_auth.py  test_api_chat.py  test_api_chat_rag_auth.py  test_api_documents.py  test_api_rag_datasets.py  test_audit.py  test_auth_identity.py  test_auth_jwt.py  test_auth_passwords.py  test_auth_tenant.py  test_chat_flow_routing.py  test_chat_node.py  test_chat_sse_events.py  test_code_agent_graph.py  test_config.py  test_desktop_react.py  test_documents_api.py  test_finance_tools.py  test_flow_registry.py  test_flows_api.py  test_graph.py  test_ingest.py  test_intent.py  test_l3_loader.py  test_langfuse_handler.py  test_llm_factory.py  test_parallel_graph.py  test_pfm_client.py  test_planner_node.py  test_prepare_node.py  test_rag_agent_graph.py  test_rag_node.py  test_ragflow_access.py  test_ragflow_bindings_store.py  test_ragflow_client.py  test_ragflow_credentials.py  test_ragflow_rag_node.py  test_rate_limit.py  (+21 more)
deploy/: README.md
resource-server/: README.md  pyproject.toml  resource-server.db
resource-server/.venv311/: pyvenv.cfg
resource-server/app/: config.py  main.py
resource-server/tests/: test_api.py  test_compose_adapter.py  test_ops_routes.py  test_portainer_adapter.py  test_store.py  test_ui_static.py
resource-server/ui/: index.html
(+446 files in other folders)
