[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flow-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "httpx>=0.27.0",
  "sse-starlette>=2.1.0",
  "psycopg[binary,pool]>=3.2.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "anyio>=4.0"]

[tool.setuptools]
packages = ["app", "app.agent", "app.agent.nodes", "app.api", "app.api.routes", "app.llm", "app.rag", "app.skills"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
