[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-flow-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-postgres>=0.0.10",
  "httpx>=0.27.0",
  "sse-starlette>=2.1.0",
  "psycopg[binary,pool]>=3.2.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.0",
  "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "anyio>=4.0"]

[tool.setuptools]
packages = ["app", "app.agent", "app.agent.nodes", "app.agent.models", "app.api", "app.api.routes", "app.llm", "app.skills", "app.rag", "app.observability"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
